# song_id

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: bit_writer.rs  fingerprint_compressor.rs  main.rs  presence.rs
src/shazam/: core.rs  fingerprinting.rs  mod.rs
src/shazam/core/: http.rs  thread_messages.rs
src/shazam/fingerprinting/: algorithm.rs  communication.rs  signature_format.rs
